# amsterdam-appointment-checker

./: .gitignore  check.py  pyproject.toml
.github/workflows/: check.yml
docs/superpowers/plans/: 2026-05-11-appointment-availability-poc.md
docs/superpowers/specs/: 2026-05-11-appointment-availability-poc-design.md
