[project]
name = "amsterdam-appt"
version = "0.1.0"
description = "PoC: check Amsterdam municipality appointment availability"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
check-amsterdam-appt = "amsterdam_appt.check:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
